# yt-audio-downloader

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
src/: cli.py  downloader.py  logging_utils.py
src/yt_audio_downloader/: cli.py  config.py  downloader.py
tests/: test_config.py
